--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -33,6 +33,14 @@
         </ul>
       </div>
       <!-- Teams -->
+      <button class="btn btn-outline-primary btn-sm mx-2 shadow-sm" (click)="navigateTo('teams/create')">
+        <i class="fas fa-plus"></i>
+        Crear equipo
+      </button>
+      <button class="btn btn-outline-primary btn-sm mx-2 shadow-sm" (click)="navigateTo('teams')">
+        <i class="fas fa-users"></i>
+        Listar equipos
+      </button>
       <button class="btn btn-secondary btn-sm mx-2 shadow-sm" (click)="isCollapsed2 = !isCollapsed2"
         [attr.aria-expanded]="!isCollapsed2" aria-controls="collapse2">
         <i class="fas fa-users"></i>
