--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <!-- Sidenav -->
   <div class="sidebar-cont shadow-sm" id="sidebar-wrapper">
     <div class="sidebar-heading text-center">
-      <img src="assets/logo.jpg" height="100px">
+      <img src="assets/logo.png" height="160px">
     </div>
     <div class="list-group list-group-flush">
       <button class="btn btn-outline-primary btn-sm mx-2 shadow-sm" (click)="navigateTo('tasks/create')">
@@ -13,7 +13,7 @@
         <i class="fas fa-tasks"></i>
         Tareas
       </button>
-      <!-- Projects -->
+      <!-- Projects
       <button
         class="btn btn-primary btn-sm mx-2 shadow-sm"
         (click)="isCollapsed1 = !isCollapsed1"
@@ -31,7 +31,7 @@
           <li>Proyecto B</li>
           <li>Proyecto ExpoKinal 2019</li>
         </ul>
-      </div>
+      </div> -->
       <!-- Teams -->
       <button class="btn btn-outline-primary btn-sm mx-2 shadow-sm" (click)="navigateTo('teams/create')">
         <i class="fas fa-plus"></i>
@@ -41,7 +41,7 @@
         <i class="fas fa-users"></i>
         Listar equipos
       </button>
-      <button class="btn btn-secondary btn-sm mx-2 shadow-sm" (click)="isCollapsed2 = !isCollapsed2"
+      <!-- <button class="btn btn-secondary btn-sm mx-2 shadow-sm" (click)="isCollapsed2 = !isCollapsed2"
         [attr.aria-expanded]="!isCollapsed2" aria-controls="collapse2">
         <i class="fas fa-users"></i>
         Equipos
@@ -52,7 +52,7 @@
           <li>Diseño</li>
           <li>Contabilidad</li>
         </ul>
-      </div>
+      </div> -->
     </div>
   </div>
   <!-- Navbar -->
@@ -73,18 +73,18 @@
 
       <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="navbarsDefault">
         <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Opciones</a>
-          </li>
+          </li> -->
           <li class="nav-item dropdown" ngbDropdown>
             <a class="nav-link dropdown-toggle" id="id01" ngbDropdownToggle>Configuracion de la cuenta</a>
             <div class="dropdown-menu" aria-labelledby="id01" ngbDropdownMenu>
-              <a class="dropdown-item"><i class='fas fa-edit'></i> Edit</a>
-              <a class="dropdown-item"><i class='fas fa-code-branch'></i> Configuration</a>
-              <a (click)="logout()" class="dropdown-item" ><i class='fas fa-sign-out-alt'></i>Log out</a>
+              <!-- <a class="dropdown-item"><i class='fas fa-edit'></i> Edit</a>
+              <a class="dropdown-item"><i class='fas fa-code-branch'></i> Configuration</a> -->
+              <a (click)="logout()" class="dropdown-item" ><i class='fas fa-sign-out-alt'></i>Iniciar sesión</a>
               <a (click)="registro()" class="dropdown-item" ><i class='fas fa-sign-out-alt'></i>Registrarse</a>
             </div>
           </li>
