--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -1,5 +1,11 @@
-<h1 class="display-2 text-primary font-weight-bold text-center mt-5">
-  Hola, suerte trabajando!
-</h1>
-<app-list-tasks></app-list-tasks>
+<div class="row justify-content-center">
+  <img
+    src="assets/logo.png"
+    height="160px"
+    class="mt-4">
+  <div class="col-12">
+    <app-list-tasks></app-list-tasks>
+    <!-- <app-list-team></app-list-team> -->
+  </div>
+</div>
 
