Style create task, login, signup.

--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -20,6 +20,6 @@
         <label for="exampleInputPassword1">Contraseña</label>
         <input [(ngModel)]="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Ingresa tu contraseña">
       </div>
-      <button (click)="signUp()" class="btn btn-primary">Entrar</button>
+      <button (click)="signUp()" class="btn btn-primary btn-block">Entrar</button>
   </div>
 </div>
