--- a/src/app/components/create-task/create-task.component.html
+++ b/src/app/components/create-task/create-task.component.html
@@ -1,9 +1,9 @@
 <section class="container">
-  <h4 class="text-primary font-weight-bold pt-4">Crear tarea</h4>
+  <h4 class="text-primary font-weight-bold pt-4 pb-2">Crear tarea</h4>
   <form [formGroup]="taskForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="name" class="font-weight-bold text-primary">Titulo de la tarea</label>
-      <input type="text" class="form-control" placeholder="Tarea" formControlName="name">
+      <input type="text" class="form-control" formControlName="name">
     </div>
     <!-- <div class="form-group">
       <label>Asignado a:</label>
@@ -15,8 +15,9 @@
       </div>
     </div> -->
     <div class="form-group">
+      <label for="deadline" class="font-weight-bold text-primary">Fecha</label>
       <div class="input-group">
-        <input class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #d="ngbDatepicker" formControlName="deadline">
+        <input id="deadline" class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #d="ngbDatepicker" formControlName="deadline">
         <div class="input-group-append">
           <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button">
             <i class="fas fa-calendar-alt"></i>
@@ -30,7 +31,7 @@
     </div>
     <div class="form-group">
       <label for="labels">Etiquetas</label>
-      <input type="text" class="form-control" placeholder="Etiquetas" formControlName="labels">
+      <input type="text" class="form-control" formControlName="labels">
     </div>
     <button type="submit" class="btn btn-primary {{ taskForm.status == 'INVALID' ? 'disabled' : ''}}">
       Crear tarea
