--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -9,7 +9,7 @@
         <label for="exampleInputPassword1">Contraseña</label>
         <input [(ngModel)]="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Ingresa tu contraseña">
       </div>
-      <button (click)="login()" class="btn btn-primary">Entrar</button>
+      <button (click)="login()" class="btn btn-primary btn-block">Entrar</button>
   </div>
 </div>
 
