--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,12 +1,21 @@
+@import '../../../theme.scss';
+
+.container-fluid {
+    margin: 0 !important;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: $dark !important;
+    vertical-align: middle;
+}
+
 .form-block {
     padding: 20px;
     margin: auto;
-    margin-top: 40px;
-    margin-bottom: 40px;
-
+    margin-top: 200px;
     max-width: 35rem;
-
-    background-color: white;
-
+    background-color: $light;
     border-radius: 5px;
 }
