--- a/src/app/components/sign-up/sign-up.component.scss
+++ b/src/app/components/sign-up/sign-up.component.scss
@@ -1,12 +1,1 @@
-.form-block {
-    padding: 20px;
-    margin: auto;
-    margin-top: 40px;
-    margin-bottom: 40px;
-
-    max-width: 35rem;
-
-    background-color: white;
-
-    border-radius: 5px;
-}
+@import '../login/login.component.scss';
